address some mvn warnings
Signed-off-by: Hans Böhm <h.boehm@gmx.at>